# Crioulo-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
data/models/backpack/: backpack.mtl
include/CriouloDemo/common/: base_application.h  model_loader.h
include/CriouloDemo/examples/01_simple_squad/: application.h
include/CriouloDemo/examples/02_model_loading/: application.h
include/CriouloDemo/nodes/: camera.h  mesh_instance.h  node.h  point_light.h
include/CriouloDemo/util/: filesystem.h  util.h
include/assimp/: revision.h
include/glad/: glad.h
shaders/examples/01_simple_squad/: simple_fs.glsl  simple_vs.glsl
shaders/examples/02_model_loading/: model_loading_fs.glsl  model_loading_vs.glsl
src/: main.cpp
src/common/: base_application.cpp  model_loader.cpp
src/core/: model_loader.cpp  model_loader.h
src/examples/01_simple_squad/: application.cpp  main.cpp
src/examples/02_model_loading/: application.cpp  main.cpp
src/nodes/: node.cpp
